# opengl-raqm

./: .gitignore  CMakeLists.txt  README.md  compile.sh
assets/shader/: vertex.glsl
cmake-tut/: .gitignore  CMakeLists.txt  License.txt  README.md  main.cpp  main.h  main.h.in
cmake-tut/gen-table/: .gitignore  CMakeLists.txt
cmake-tut/myfuns/: .gitignore  CMakeLists.txt  myfuns1.h  myfuns2.cpp  myfuns2.h
cmake-tut/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
libs/raqm/: libraqm.la
libs/raqm/include/: config.h
libs/raqm/lib/: libraqm.0.dylib  libraqm.lai
make/src/: utils.c  utils.h
src/: funs.cpp  funs.h  load_shader.cpp  load_shader.h  main.cpp  main_opengl.c  main_opengl.cpp  main_opengl_utils.cpp  main_opengl_utils.h  raqm_utils.c  raqm_utils.h  render_text.cpp  render_text.h  utils.cpp  utils.h
